# mkdocs-asciinema-player

./: .gitignore  .gitpod.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Taskfile.yml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  taskfile.yml
.config/: dependencies.yml  mypy.ini  ruff.toml  yamllint.yml
.config/environments/: .env.example
.config/linters/: bandit.yml  djlint.json  flake8.ini  pylintrc.ini  yamllint.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump.yml  lint.yml  pages.yml  pypi.yml  test.yml
.gitpod/: Dockerfile
.taskfiles/: check.yml  lint.yml  mkdocs.yml  test.yml  update.yml
.taskfiles/scripts/: update_dependencies.py  update_docs.py
.taskfiles/scripts/templates/: themes.md
contributing/: index.html
css/: terminal-player.css
docs/: .pages  contributing.md  getting-started.md  index.md  setup.md  themes.md
docs/assets/asciinema/: bootstrap.cast
getting-started/: index.html
search/: search_index.json
setup/: index.html
src/mkdocs_asciinema_player/: plugin.py  utils.py
src/mkdocs_asciinema_player/assets/: terminal-player.css
src/mkdocs_asciinema_player/templates/: asciinema-player.html  asciinema_player.html  asciinema_player.html.j2  asciinema_player.j2
src/mkdocs_asciinema_player/templates/themes/: blue.html  night.html  none.html  penguin.html
tests/fixtures/assets/: test.cast
tests/fixtures/projects/material/docs/: index.md
tests/fixtures/projects/simple/: mkdocs.yml
tests/fixtures/test_doc/: mkdocs_default.yml
tests/fixtures/test_doc/docs/: blue-theme.md  index.md  night-theme.md  none-theme.md  penguin-theme.md
tests/fixtures/test_doc/docs/assets/asciinema/: sw-episode-iv.cast
tests/functional/: test_simple_project.py
tests/functional/projects/simple/: mkdocs.yml
tests/integration/: test_integration_projects.py
tests/integration/projects/material/: mkdocs.yml
tests/integration/projects/simple/: mkdocs.yml
tests/unit/: test_plugin.py  test_utils.py
tests/unit/data/: expected_data.md
tests/visual/: base_case_test.py  test_home_page.py
themes/: index.html
