[project]
name = "mkdocs-asciinema-player"
version = "0.19.1"
description = "A Mkdocs Plugin to include asciinema player in your documentation."
authors = [{ name = "Philippe-André De Carvalho", email = "philippe.andre.decarvalho@gmail.com" }]
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Philippe-André De Carvalho", email = "philippe.andre.decarvalho@gmail.com" }]
keywords = [
    "mkdocs",
    "documentation",
    "asciinema",
    "asciinema-player",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: POSIX",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Build Tools",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10,<4"
dependencies = [
  "mkdocs>=1.6.1,<2"
]

[project.urls]
homepage = "https://github.com/pa-decarvalho/mkdocs-asciinema-player"
repository = "https://github.com/pa-decarvalho/mkdocs-asciinema-player"
documentation = "https://pa-decarvalho.github.io/mkdocs-asciinema-player"

[project.entry-points."mkdocs.plugins"]
asciinema-player = "mkdocs_asciinema_player.plugin:AsciinemaPlayerPlugin"

[dependency-groups]
dev = [
  "asciinema>=2.4.0,<3",
  "commitizen>=4.9.1,<5",
  "requests>=2.32.5,<3",
  "pyyaml>=6.0.3,<7",
  "types-pyyaml>=6.0.12.20250915,<7",
  "types-requests>=2.32.4.20250913,<3",
  "djlint>=1.36.4,<2",
  "yamllint>=1.37.1,<2",
  "ruff>=0.14.0,<0.15",
  "pytest>=8.4.2,<9",
  "mkdocs-awesome-pages-plugin>=2.9.3,<3",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
